--- a/index.css
+++ b/index.css
@@ -72,13 +72,21 @@
     width: 500px;
 }
 
-.fa-regular fa-star{
+#star{
+    right: 0px;
+    font-size: 60px;
+    height: 50px;
+    width: 50px;
     position: absolute;
-    top: 0px;
-    height: 20px;
-    width: 20px;
-    z-index: 3;
+    z-index: 1;
 
+}
+
+#label{
+    position: absolute;
+    left: 200px;
+    top: 380px;
+    z-index: 1;
 }
 
 #card{
@@ -104,10 +112,20 @@
 }
 
 #cardimage{
+    border-radius: 20px;
     height: 250px;
 
 }
 
+#parkinfo {
+    position: absolute;
+    left: 200px;
+    top: 350px;
+    height: 500px;
+    width: 1500px;
+    background-color: white;
+    z-index: 4; 
+}
 
 #iframe{
     position: absolute;
