--- a/index.css
+++ b/index.css
@@ -9,62 +9,87 @@
 
 #title{
     position: absolute;
-    top: 50px;
-    left: 600px;
+    top: 25px;
+    left: 500px;
     font-size: 80px;
     color: white;
     z-index: 1;
 }
 
+
 #myCarousel {
-    position: relative;
-    left: 250px;
-    top: 10px
-    /* bottom: 350px */
+    /* position: relative; */
+    /* left: 250px; */
+    /* top: 10px; */
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    
     
 }
+/* changed margin  */
 
 .carousel-indicators {
-    position: absolute;
-    margin: auto;
+    /* position: absolute; */
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .carousel-item {
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
     height: 300px;
-    width: 800px;
+    width: 1400px;
     background-color: rgb(88, 88, 90);
     /* text-align: center; */
 }
+/* changed margin  */
 
-/* .container {
-    text-align: center; 
-} */
 
 #img1{
-    position: absolute;
-    left: 0px;
+     position: absolute; 
+     left: 0px; 
     height: 300px;
     width: 1400px;
+    /* margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto; */
 }
+/* changed margin  */
 #img2{
-    position: absolute;
-    left: 0px;
+     position: absolute;
+     left: 0px; 
     height: 300px;
     width: 1400px;
+    /* margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto; */
 }
+/* changed margin  */
 #img3{
-    position: absolute;
-    left: 0px;
+    position: absolute; 
+    left: 0px; 
     height: 300px;
     width: 1400px;
+    /* margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto; */
 }
+/* changed margin  */
 
 #form{
-    position: absolute;
+    position: absolute; 
     border-radius: 20px;
-    left: 700px;
-    top: 250px
+    /* margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto; */
+    z-index: 1;
+     left: 700px; 
+     top: 250px 
 }
+/* changed margin  */
 
 #input{
     border-radius: 50px;
@@ -85,7 +110,7 @@
 #label{
     position: absolute;
     left: 200px;
-    top: 380px;
+    top: 350px;
     z-index: 1;
 }
 
@@ -118,38 +143,49 @@
 }
 
 #container{
-    position: absolute;
-    top: 400px;
-    left: 150px;
+    /* position: absolute; */
+    /* top: 400px; */
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    /* left: 150px; */
     height: 500px;
     width: 1600px;
     /* background-color: aliceblue; */
     background-color: rgb(1, 1, 58);
 }
+/* changed margin  */
 
 #containertwo{
-    position: absolute;
-    top: 900px;
-    left: 150px;
+    /* position: absolute;  */
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    /* top: 900px; */
+    /* left: 150px; */
     height: 300px;
     width: 1600px;
     background-color: pink;
 
 }
+/* changed margin  */
 
 #containerthree{
-    position: absolute;
-    top: 1300px;
-    left: 150px;
+    /* position: absolute; */
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    /* top: 1300px; */
+    /* left: 150px; */
     height: 300px;
     width: 1600px;
     background-color: rgb(34, 70, 18);
 
 }
-
+/* changed margin  */
 #stargazing{
     position: absolute;
-    left: 50px;
+    left: 170px;
      border-radius: 50%; 
     width: 300px;
     height: 300px;
@@ -157,7 +193,7 @@
 
 #hiking{
     position: absolute;
-    left: 350px;
+    left: 470px;
      border-radius: 50%; 
     width: 300px;
     height: 300px;
@@ -165,7 +201,7 @@
 
 #kayaking{
     position: absolute;
-    left: 650px;
+    left: 770px;
      border-radius: 50%; 
     width: 300px;
     height: 300px;
@@ -173,7 +209,7 @@
 
 #camping{
     position: absolute;
-    left: 950px;
+    left: 1070px;
     border-radius: 50%; 
     width: 300px;
     height: 300px;
@@ -181,7 +217,7 @@
 
 #horseback{
     position: absolute;
-    left: 1250px;
+    left: 1370px;
     border-radius: 50%; 
     width: 300px;
     height: 300px;
@@ -200,7 +236,7 @@
     left: 150px;
     top: 350px;
     height: 500px;
-    width: 1600px;
+    width: 1650px;
     background-color: white;
     z-index: 4; 
 }
@@ -250,4 +286,10 @@
     height: 100px;
     width: 300px;
 
+}
+
+#activitylabel{
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
