--- a/index.css
+++ b/index.css
@@ -163,13 +163,17 @@
 
 
 #containerthree{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
     /* position: absolute; */
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 100px;
     /* top: 1300px; */
     /* left: 150px; */
-    height: 300px;
+    height: 500px;
     width: 1600px;
     background-color: rgb(34, 70, 18);
 
@@ -337,7 +341,7 @@
 
 #parkbutton{
     position: absolute;
-    right: 0px;
+    right: 150px;
     top: 0px;
     height: 50px;
     width: 100px;
