--- a/index.css
+++ b/index.css
@@ -3,7 +3,9 @@
    /* height: 100%;
    overflow: hidden; 
    margin: 0; */ 
-    background-color: rgb(1, 1, 58);
+   background-color: rgb(3, 46, 14);
+   /* background-color: rgb(146, 86, 131); */
+    /* background-color: rgb(1, 1, 58); */
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
@@ -144,8 +146,8 @@
     /* left: 150px; */
     height: 500px;
     width: 1600px;
-    
-    background-color: rgb(1, 1, 58);
+    background-color: rgb(146, 86, 131);
+    /* background-color: rgb(1, 1, 58); */
 }
 
 
@@ -176,8 +178,8 @@
     /* left: 150px; */
     height: 500px;
     width: 1600px;
-    background-color: rgb(34, 70, 18);
-
+    /* background-color: rgb(34, 70, 18); */
+    background-color: rgb(146, 86, 131);
 }
 /* changed margin  */
 #stargazing{
@@ -325,7 +327,7 @@
 #infohours{
     position: absolute;
     top: 70px;
-    left: 280px;
+    left: 265px;
     text-align: center;
 
 }
@@ -367,8 +369,8 @@
 
 #parkbutton{
     position: absolute;
-    right: 200px;
-    top: 300px;
+    right: 950px;
+    top: 350px;
     height: 50px;
     width: 100px;
 }
@@ -384,11 +386,11 @@
     }
 
 #right{
-    /* transform: rotate(45deg); */
+    transform: rotate(175deg); 
     height: 100px;
     width: 100px;
     position: absolute;
     right: 0;
     top: 50%;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
 }
