--- a/index.css
+++ b/index.css
@@ -187,6 +187,10 @@ scrollbar-width: none; */
 
 }
 
+.card-title{
+    font-weight: bold;
+}
+
 
 #containerthree{
     overflow-x: scroll;
@@ -203,7 +207,7 @@ scrollbar-width: none; */
 }
 
 #stargazing{
-    opacity: 0.5;
+    /* opacity: 0.5; */
     position: absolute;
     left: 200px;
     border-radius: 50%; 
@@ -241,9 +245,9 @@ scrollbar-width: none; */
 
 #camplabel{
     position: absolute;
-    margin-top: 90px;
+    margin-top: -40px;
     margin-left: 1000px;
-    color: rgb(245, 252, 252);
+    color: rgb(4, 54, 54);
     font-weight: bold;
     font-size: 25px;
     z-index: 3;
@@ -251,9 +255,9 @@ scrollbar-width: none; */
 
 #horselabel{
     position: absolute;
-    margin-top: 90px;
-    margin-left: 1400px;
-    color: rgb(237, 241, 241);
+    margin-top: -40px;
+    margin-left: 1300px;
+    color: rgb(1, 48, 48);
     font-weight: bold;
     font-size: 25px;
     z-index: 3;
@@ -339,9 +343,9 @@ scrollbar-width: none; */
 
 #hikinglabel{
     position: absolute;
-    margin-top: 90px;
-    margin-left: 400px;
-    color: rgb(248, 250, 250);
+    margin-top: -40px;
+    margin-left: 450px;
+    color: rgb(6, 65, 65);
     font-weight: bold;
     font-size: 25px;
     z-index: 3;
@@ -355,9 +359,9 @@ scrollbar-width: none; */
 
 #starlabel {
     position: absolute;
-    margin-top: 60px;
-    margin-left: 80px;
-    color: rgb(253, 255, 255);
+    margin-top: -40px;
+    margin-left: 100px;
+    color: rgb(6, 66, 66);
     font-weight: bold;
     font-size: 25px;
     z-index: 3;
@@ -365,9 +369,9 @@ scrollbar-width: none; */
 
 #kayaklabel {
     position: absolute;
-    margin-top: 90px;
-    margin-left: 700px;
-    color: rgb(245, 252, 252);
+    margin-top: -40px;
+    margin-left: 720px;
+    color: rgb(3, 66, 66);
     font-weight: bold;
     font-size: 25px;
     z-index: 3;
@@ -384,30 +388,27 @@ scrollbar-width: none; */
 
 #infoactivities{
     position: absolute;
-    top: 450px;
-    /* left: 150px; */
-    /* height: 100px; */
-    /* width: 400px; */
+    top: 400px;
     text-align: center;
 }
 
 #infoweather{
     position: absolute;
-    top: 250px;
+    top: 500px;
     text-align: center;
 }
 
 #infohours{
     position: absolute;
     top: 70px;
-    left: 265px;
+    left: 260px; 
     text-align: center;
 
 }
 
 #infodetails{
     position: absolute;
-    top: 700px;
+    top: 250px;
     text-align: center;
 }
 
